<resources>
    <string name="app_name">FixCSProject</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_usertabrequest">UserTabRequestActivity</string>
    <string name="title_activity_usertabaccount">UserTabAccountActivity</string>
    <string name="title_activity_employeetabaccount">EmployeeTabAccountActivity</string>
    <string name="title_activity_employeetabfind">EmployeeTabFindActivity</string>
    <string name="title_activity_employeetabrequest">EmployeeTabRequestActivity</string>
    <string name="title_activity_useraccountedit">UserAccountEditActivity</string>
    <string name="title_activity_employeeaccountedit">EmployeeAccountEditActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_create_account">Create account</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="create_an_id">Create an ID</string>
</resources>